--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 eureka:
    client:
      service-url:
-         defaultZone: http://localhost:8761/eureka/
+         defaultZone: http://localhost:8761/eureka/，http://localhost:8762/eureka/
      register-with-eureka: false
+   # 关闭安全警告
+   #server:
+    # enable-self-preservation: false
 spring:
    application:
       name: eureka
-server:
-  port: 8761
+#server:
+#  port: 8761
